# Variatio

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-test-and-publish.yml  python-publish.yml
examples/: example.ipynb
tests/: test_generic.py  test_utils.py
variatio/: analyzer.py  vizualizer.py
