[metadata]
name = variatio
version = 0.0.1
author = Dmitry Brazhenko
author_email = brazhenko.dmitry@gmail.com
description = An experimental Python library for advanced A/B testing analysis, leveraging statistical techniques and ML for deeper insights.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dmitry-brazhenko/Variatio
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = variatio
packages = find:
python_requires = >=3.6

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[options.packages.find]
where = variatio
